# farm-ng-package

./: README.md  setup.cfg
.github/workflows/: pypi-release.yml
farm_ng/package/: commands.py  package.py
