[metadata]
name = farm_ng_package
version = 0.1.0-dev
description =
long_description = file: README.md
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-pysetup
download_url = https://github.com/farm-ng/farm-ng-pysetup
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel

install_requires =
    protobuf
    grpcio
    grpcio-tools

packages =
    farm_ng.package

[mypy]
files = farm_ng
ignore_missing_imports = True
