[metadata]
name = farm_ng_package
version = 0.1.5-dev
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/farm-ng-pysetup
download_url = https://github.com/farm-ng/farm-ng-pysetup
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel

install_requires =
    # Avoid installing a too-new protoc at build time in downstream packages.
    # See SWE-427.
    grpcio-tools==1.64.1

packages =
    farm_ng.package

[mypy]
files = farm_ng
ignore_missing_imports = True
